--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/*General styles*/
+/* General styles */
 * {
   margin: 0;
   padding: 0;
@@ -8,13 +8,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
-
+  background-color: #f4f4f9;
   --primary-text-color: #181820;
   --secondary-text-color: #5c5c62;
   --durability-text-color: #6a737d9c;
   --icon-color: #6a737d;
-  --border-color: #ff9a0045;
-  --text-decoration-color: #ff9a00;
+  --border-color: #0094deca;
+  --text-decoration-color: #0094de;
 }
 
 .container {
@@ -37,16 +37,17 @@ body {
 
 .resume {
   margin: 50px auto;
-  border: 1px solid #f5f5f5;
-  box-shadow: 1px 1px 7px 7px #f5f5f5;
+  border: 1px solid #e0e0e0;
+  box-shadow: 1px 1px 10px 2px #e0e0e0;
   padding: 30px 0;
   max-width: 900px;
+  background-color: #ffffff;
 }
 
 .resume__block {
   border-bottom: 3px solid var(--border-color);
   padding-bottom: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 50px; /* Increased margin for more space between blocks */
 }
 
 @media screen and (max-width: 576px) {
@@ -68,8 +69,7 @@ body {
   }
 }
 
-
-/*Contact info styles*/
+/* Contact info styles */
 .contact-info__header,
 .contact-info__sub-header {
   text-align: center;
@@ -80,11 +80,13 @@ body {
   margin-bottom: 15px;
   text-decoration-color: var(--text-decoration-color);
   text-decoration-line: underline;
+  font-size: 2rem;  /* Increased font size */
 }
 
 .contact-info__sub-header {
   color: var(--secondary-text-color);
   margin-bottom: 30px;
+  font-size: 1.5rem;  /* Increased font size */
 }
 
 .contact-info__block {
@@ -133,11 +135,11 @@ body {
   border-color: var(--text-decoration-color);
 }
 
-
-/*Intro and skills styles*/
+/* Intro and skills styles */
 .intro {
   display: flex;
   justify-content: start;
+  margin-bottom: 30px;  /* Added margin for spacing */
 }
 
 .intro__icon-wrapper {
@@ -165,6 +167,7 @@ body {
   color: var(--secondary-text-color);
   text-align: center;
   margin-bottom: 15px;
+  font-size: 1.5rem;  /* Increased font size */
 }
 
 .skills__text {
@@ -172,8 +175,7 @@ body {
   text-align: justify;
 }
 
-
-/*Experience and additional info styles*/
+/* Experience and additional info styles */
 .experiences {
   flex: 1 1 60%;
   margin-right: 50px;
@@ -183,13 +185,14 @@ body {
   color: var(--secondary-text-color);
   text-align: left;
   margin-bottom: 20px;
+  font-size: 1.5rem;  /* Increased font size */
 }
 
 .experiences__company-header-durability {
   color: var(--durability-text-color);
   text-align: left;
   margin-bottom: 10px;
-  font-size: 15px;
+  font-size: 1rem;
 }
 
 .experiences__company-header-name {
@@ -198,29 +201,37 @@ body {
   text-decoration-line: underline;
   text-align: left;
   margin-bottom: 20px;
+  font-size: 1.2rem;  /* Increased font size */
 }
 
 .experiences__company-project {
   margin-left: 15px;
   margin-bottom: 25px;
+  padding-bottom: 25px;
+
 }
 
 .experiences__company-project-role {
   color: var(--durability-text-color);
   text-align: left;
   margin-bottom: 10px;
-  font-size: 15px;
+  font-size: 1rem;
 }
 
 .experiences__company-project-name {
   color: var(--primary-text-color);
   text-align: left;
   margin-bottom: 10px;
+  font-size: 1.2rem;  /* Increased font size */
+
 }
 
 .experiences__company-project-responsibilities {
   color: var(--secondary-text-color);
   padding-left: 20px;
+  margin-bottom: 15px;  /* Added margin for spacing */
+  border-bottom: 3px solid #0094deca;  /* Added border to divide project types */
+
 }
 
 .additional-info {
@@ -232,26 +243,28 @@ body {
 }
 
 .additional-info__education-header {
-  color: var(--secondary-text-color);
+  color: var (--secondary-text-color);
   text-align: left;
   margin-bottom: 20px;
+  font-size: 1.5rem;  /* Increased font size */
 }
 
 .additional-info__education-university-durability {
-  color: var(--durability-text-color);
+  color: var (--durability-text-color);
   text-align: left;
   margin-bottom: 10px;
-  font-size: 15px;
+  font-size: 1rem;
 }
 
 .additional-info__education-university-speciality {
-  color: var(--primary-text-color);
+  color: var (--primary-text-color);
   text-align: left;
   margin-bottom: 10px;
+  font-size: 1.2rem;  /* Increased font size */
 }
 
 .additional-info__education-university-name {
-  color: var(--secondary-text-color);
+  color: var (--secondary-text-color);
 }
 
 .additional-info__languages {
@@ -259,11 +272,13 @@ body {
 }
 
 .additional-info__languages-header {
-  color: var(--secondary-text-color);
+  color: var (--secondary-text-color);
   text-align: left;
   margin-bottom: 20px;
+  font-size: 1.5rem;  /* Increased font size */
 }
 
 .additional-info__languages-item {
-  color: var(--secondary-text-color);
+  color: var (--secondary-text-color);
+  margin-bottom: 10px;
 }
